# surf-disco

./: CNAME  Cargo.toml  README.md  crates.js  flake.nix  help.html  index.html  search-index.js  settings.html  source-files.js  src-files.js
.github/workflows/: build.yml  build_windows.yml  coverage.yml
implementors/core/clone/: trait.Clone.js
implementors/core/convert/: trait.From.js
implementors/core/default/: trait.Default.js
implementors/core/fmt/: trait.Debug.js
implementors/core/marker/: trait.Copy.js  trait.Freeze.js  trait.Send.js  trait.Sync.js  trait.Unpin.js
implementors/core/ops/drop/: trait.Drop.js
implementors/futures_core/stream/: trait.Stream.js
implementors/futures_sink/: trait.Sink.js
implementors/serde/de/: trait.Deserialize.js
implementors/serde/ser/: trait.Serialize.js
implementors/tide_disco/error/: trait.Error.js
implementors/tide_disco/healthcheck/: trait.HealthCheck.js
search.desc/surf_disco/: surf_disco-desc-0-.js
src/: client.rs  error.rs  lib.rs  reexports.rs  request.rs  socket.rs
src/surf_disco/: client.rs.html  error.rs.html  lib.rs.html  reexports.rs.html  request.rs.html  socket.rs.html
surf_disco/: all.html  enum.Method.html  enum.StatusCode.html  fn.connect.html  fn.get.html  fn.post.html  index.html  sidebar-items.js  struct.StatusCode.html  struct.Url.html  trait.Error.html
surf_disco/client/: enum.ContentType.html  enum.HealthStatus.html  index.html  sidebar-items.js  struct.Client.html  struct.ClientBuilder.html  trait.HealthCheck.html
surf_disco/error/: index.html  sidebar-items.js  struct.ClientError.html  trait.Error.html
surf_disco/reexports/: index.html  sidebar-items.js  struct.WebSocketConfig.html
surf_disco/request/: index.html  struct.Request.html
surf_disco/socket/: enum.Unsupported.html  index.html  sidebar-items.js  struct.Connection.html  struct.SocketRequest.html
trait.impl/core/clone/: trait.Clone.js
trait.impl/core/convert/: trait.From.js
trait.impl/core/default/: trait.Default.js
trait.impl/core/fmt/: trait.Debug.js
trait.impl/core/marker/: trait.Copy.js  trait.Freeze.js  trait.Send.js  trait.Sync.js  trait.Unpin.js  trait.UnsafeUnpin.js
trait.impl/core/ops/drop/: trait.Drop.js
trait.impl/futures_core/stream/: trait.Stream.js
trait.impl/futures_sink/: trait.Sink.js
trait.impl/serde/de/: trait.Deserialize.js
trait.impl/serde/ser/: trait.Serialize.js
trait.impl/tide_disco/healthcheck/: trait.HealthCheck.js
(+4 files in other folders)
