[package]
name = "surf-disco"
version = "0.4.8"
authors = ["Espresso Systems <hello@espressosys.com>"]
edition = "2021"

[dependencies]
async-std = { version = "1.10.0", features = ["unstable", "attributes"] }
async-tungstenite = { version = "0.13.1", features = [
    "async-std-runtime",
    "async-tls",
    "async-native-tls",
] }
derivative = "2.2"
futures = "0.3.21"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.61"
surf = "2.3.1"
#tide-disco = { git = "https://github.com/EspressoSystems/tide-disco.git", tag = "v0.4.8" }
tide-disco = { git = "https://github.com/EspressoSystems/tide-disco.git", branch = "nfy/transition_away_from_const_generics" }
versioned-binary-serialization = { git = "https://github.com/EspressoSystems/versioned-binary-serialization.git", tag = "0.1.2" }

[dev-dependencies]
portpicker = "0.1"
toml = "0.8"
