[package]
name = "surf-disco"
description = "HTTP client for use with tide-disco applications"
version = "0.8.0"
authors = ["Espresso Systems <hello@espressosys.com>"]
edition = "2021"
license-file = "LICENSE"

[dependencies]
async-std = { version = "1.12", features = ["attributes"] }
async-tungstenite = { version = "0.26.1", features = [
    "async-std-runtime",
    "async-tls",
    "async-native-tls",
] }
derivative = "2.2"
futures = "0.3"
hex = "0.4"
reqwest = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tide-disco = "0.8"
tracing = "0.1"
vbs = "0.1"

[dev-dependencies]
async-compatibility-layer = { version = "1.1", features = ["logging-utils"] }
portpicker = "0.1"
toml = "0.8"
